Replaced JS call to alert by showAlertDialog and fixed z-index CSS attributes.
Monotone-Parent: 4151768064015248480cf2e39394b40daf17d61b
Monotone-Revision: 3cd11326bdc49c91494e0a2e9cf1465efe47c52e

Monotone-Author: flachapelle@inverse.ca
Monotone-Date: 2010-08-18T17:24:55
Monotone-Branch: ca.inverse.sogo

--- a/UI/WebServerResources/generic.css
+++ b/UI/WebServerResources/generic.css
@@ -548,7 +548,7 @@ DIV.resize-handle
 DIV.dialog
 { position: absolute;
   width: 350px;
-  z-index: 50; }
+  z-index: 3; }
 
 DIV.dialog DIV
 { border: 1px solid #444;
@@ -579,8 +579,7 @@ DIV.dialog.right DIV
 DIV.dialog.none
 { position: relative;
   opacity: 1;
-  margin: 100px auto; /* top margin could be dynamically set depending on window height */
-  z-index: 10000; }
+  margin: 100px auto; /* top margin could be dynamically set depending on window height */ }
 
 DIV.dialog.none DIV
 { padding: 10px;
@@ -594,6 +593,7 @@ DIV#bgDialogDiv
   top: 0px; left: 0px;
   bottom: 0px;
   right: 0px;
+  z-index: 2;
   opacity: .3;
   background-color: #555 !important; }
 
